--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,11 @@
     "require": {
         "php": ">=8.1",
         "doctrine/orm": "^3.3",
-        "doctrine/dbal": "^4.2"
+        "doctrine/dbal": "^4.2",
+        "symfony/cache": "^7.2",
+        "ramsey/uuid": "^4.7",
+        "psr/event-dispatcher": "^1.0",
+        "psr/container": "^2.0"
     },
     "license": "MIT",
     "authors": [
@@ -17,7 +21,12 @@
     ],
     "autoload": {
         "psr-4": {
-            "Flowy\\\\": "src/"
+            "Flowy\\": "src/"
+        }
+    },
+    "autoload-dev": {
+        "psr-4": {
+            "Flowy\\Tests\\": "tests/"
         }
     },
     "require-dev": {
