docs: mark PSR-3 logger integration as done
- Logger integration and test coverage for WorkflowEngineService and WorkflowExecutor are complete per spec.

--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
         "symfony/cache": "^7.2",
         "ramsey/uuid": "^4.7",
         "psr/event-dispatcher": "^1.0",
-        "psr/container": "^2.0"
+        "psr/container": "^2.0",
+        "symfony/event-dispatcher": "^7.2"
     },
     "license": "MIT",
     "authors": [
