--- a/composer.json
+++ b/composer.json
@@ -32,6 +32,13 @@
         }
     },
     "require-dev": {
-        "phpunit/phpunit": "^12.1"
+        "phpunit/phpunit": "^12.1",
+        "phpstan/phpstan": "^1.11",
+        "squizlabs/php_codesniffer": "^3.7"
+    },
+    "scripts": {
+        "test": "phpunit --testdox",
+        "stan": "phpstan analyse src --level=7",
+        "cs": "phpcs --standard=PSR12 src/ tests/"
     }
 }
