chore: update package name

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "flowy/core",
+    "name": "iammerus/flowy",
     "description": "Flowy - A PHP Workflow Engine",
     "type": "library",
     "homepage": "https://github.com/iammerus/flowy",
